added category for items

--- a/backend_flatiron_shopping/test/fixtures/items.yml
+++ b/backend_flatiron_shopping/test/fixtures/items.yml
@@ -5,9 +5,11 @@ one:
   price: 1.5
   image: MyString
   description: MyString
+  type: 
 
 two:
   name: MyString
   price: 1.5
   image: MyString
   description: MyString
+  type: 
